Header alignment fix

--- a/client/styles/main.css
+++ b/client/styles/main.css
@@ -19,11 +19,11 @@ a {
 }
 
 .header {
-  @apply bg-plain4/50 sticky top-0 z-50 flex h-[12vh] w-full flex-col items-center;
+  @apply sticky top-0 z-50 flex h-[12vh] w-full flex-col items-center bg-plain4/50;
 }
 
 .footer {
-  @apply bg-plain4 fixed bottom-0 flex w-full justify-center p-[20px];
+  @apply fixed bottom-0 flex w-full justify-center bg-plain4 p-[20px];
 }
 
 main {
@@ -42,7 +42,9 @@ main {
 
 .navbar {
   * {
-    margin: 0 10px;
+    /* margin: 0 10px; */
+    margin-left: 10px;
+    margin-right: 20px;
   }
 }
 
